<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.dopochki"
    android:background="?colorOnPrimary"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space">

        <TextView
            android:id="@+id/prevText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:textIsSelectable="true"
            android:textSize="@dimen/normal_text_size" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textIsSelectable="true"
            android:textSize="@dimen/large_text_size" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/buttonClear"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/buttonDel"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView2"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonDel"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/backspace"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/buttonCopy"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintTop_toBottomOf="@id/scrollView2"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonCopy"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/copy"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/buttonDiv"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/buttonDel"
        app:layout_constraintTop_toBottomOf="@id/scrollView2"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonDiv"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/div"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/buttonCopy"
        app:layout_constraintTop_toBottomOf="@id/scrollView2"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button7"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num7"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonClear"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button8"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num8"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/buttonClear"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button9"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num9"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/buttonMul"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/buttonClear"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonMul"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mul"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/buttonClear"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button4"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num4"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button5"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num5"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button6"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num6"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/buttonSub"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonSub"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sub"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button1"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num1"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button2"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num2"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button3"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num3"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/buttonAdd"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonAdd"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/add"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button0"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num0"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonDot"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonDot"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonEq"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonEq"
        style="@style/Theme.dopochki.button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/buttonDot"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>